Added a new file

--- a/12_Map_Filter_Reduce.ipynb
+++ b/12_Map_Filter_Reduce.ipynb
@@ -259,6 +259,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 07. Capital letters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter string: The Quick Brown Fox Jumped Over The Lazy Dog\n",
+      "['T', 'Q', 'B', 'F', 'J', 'O', 'T', 'L', 'D']\n",
+      "['T', 'Q', 'B', 'F', 'J', 'O', 'T', 'L', 'D']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "A list of all the capital letters (and not white space) in a given sentance.\n",
+    "input:'The Quick Brown Fox Jumped Over The Lazy Dog'\n",
+    "\"\"\"\n",
+    "sent= input('Enter string: ')\n",
+    "capital = [i for i in sent if i==i.upper() if i!=' ']\n",
+    "print(capital)\n",
+    "\n",
+    "'''or'''\n",
+    "a= list(filter(lambda x: x==x.upper() and x!=' ', sent))\n",
+    "print(a)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
