--- a/12_Map_Filter_Reduce.ipynb
+++ b/12_Map_Filter_Reduce.ipynb
@@ -295,6 +295,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 08. Squares of numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100, 121, 144, 169, 196, 225, 256, 289, 324, 361, 400, 441, 484, 529, 576, 625, 676, 729, 784, 841, 900, 961]\n",
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100, 121, 144, 169, 196, 225, 256, 289, 324, 361, 400, 441, 484, 529, 576, 625, 676, 729, 784, 841, 900, 961]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "A list of all square numbers formed by squaring the numbers from 1 to 1000.\n",
+    "\"\"\"\n",
+    "a= len([x for x in range(1,1001) if x**2< 1000])\n",
+    "print([x**2 for x in range(1,a+1) ])\n",
+    "\n",
+    "'''or'''\n",
+    "\n",
+    "b= list(filter(lambda x: x**2<1000, range(1,1001)))\n",
+    "print(list(map(lambda x: x**2, b)))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
