--- a/12_Map_Filter_Reduce.ipynb
+++ b/12_Map_Filter_Reduce.ipynb
@@ -329,6 +329,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 09. Map1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated random secret agents: \n",
+      "['Mr. Orange', 'Mr. Orange', 'Mr. Blonde']\n",
+      "['Mr. Orange', 'Mr. Orange', 'Mr. Blonde']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "import random\n",
+    "names = ['Mary', 'Isla', 'Sam']\n",
+    "code_names = ['Mr. Pink', 'Mr. Orange', 'Mr. Blonde']\n",
+    "for i in range(len(names)):\n",
+    "    names[i] = random.choice(code_names)\n",
+    "print (names)\n",
+    "\n",
+    "As you can see, this algorithm can potentially assign the same secret code name to multiple secret agents. \n",
+    "Rewrite the above code using map and lambda.\n",
+    "\"\"\"\n",
+    "import random\n",
+    "names = ['Mary', 'Isla', 'Sam']\n",
+    "code_names = ['Mr. Pink', 'Mr. Orange', 'Mr. Blonde']\n",
+    "print('Generated random secret agents: ')\n",
+    "print([random.choice(code_names) for i in range(len(names)) ])  # list comprehension\n",
+    "\n",
+    "'''or'''\n",
+    "name=  list(map(lambda x: random.choice(code_names), range(3)))  # mapping\n",
+    "print(name)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
