--- a/12_Map_Filter_Reduce.ipynb
+++ b/12_Map_Filter_Reduce.ipynb
@@ -375,6 +375,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10. Map2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Secret codes:\n",
+      "[-81831209780139242, -5801220667050319345, -2177109046453740629]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "names = ['Mary', 'Isla', 'Sam']\n",
+    "for i in range(len(names)):\n",
+    "    names[i] = hash(names[i])\n",
+    "print (names)\n",
+    "\n",
+    "(Hopefully, the secret agents will have good memories and won’t forget each other’s secret \n",
+    "code names during the secret mission.)\n",
+    "Rewrite the above code using map.\n",
+    "\"\"\"\n",
+    "\n",
+    "names = ['Mary', 'Isla', 'Sam']\n",
+    "#hash(names)   ## list cannot be hashable as it is immutable \n",
+    "''' hash[object]= hash value,  use only for immutable object(string,int,float,tuple) '''\n",
+    "''' check whether obj is immutable or not '''\n",
+    "\n",
+    "print('Secret codes:')\n",
+    "print( list(map(lambda x: hash(x), names ))  )\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
