--- a/12_Map_Filter_Reduce.ipynb
+++ b/12_Map_Filter_Reduce.ipynb
@@ -418,6 +418,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 11. Height"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Mary', 'height': 160}, {'name': 'Isla', 'height': 80}]\n",
+      "Average height: 120.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "people = [{'name': 'Mary', 'height': 160},\n",
+    "          {'name': 'Isla', 'height': 80},\n",
+    "          {'name': 'Sam'}]\n",
+    "          \n",
+    "height_total = 0\n",
+    "height_count = 0\n",
+    "for person in people:\n",
+    "    if 'height' in person:\n",
+    "        height_total += person['height']\n",
+    "        height_count += 1\n",
+    "\n",
+    "    if height_count > 0:\n",
+    "        average_height = height_total / height_count\n",
+    "print (average_height)\n",
+    "    \n",
+    "Try rewriting the code below using map, reduce and filter. \n",
+    "Filter takes a function and a collection. \n",
+    "It returns a collection of every item for which the function returned True.\n",
+    "\"\"\"\n",
+    "\n",
+    "from functools import reduce\n",
+    "people = [{'name': 'Mary', 'height': 160},\n",
+    "          {'name': 'Isla', 'height': 80},\n",
+    "          {'name': 'Sam'}]\n",
+    "\n",
+    "a= list(filter(lambda x:'height' in x, people))   # filter dict. where height key exist\n",
+    "print(a)\n",
+    "avg_height = reduce(lambda x,y : (x['height']+ y['height'])/len(a) , a)\n",
+    "print('Average height:',avg_height)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
