--- a/12_Map_Filter_Reduce.ipynb
+++ b/12_Map_Filter_Reduce.ipynb
@@ -478,6 +478,59 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Celsius values:  [-34.44, -28.89, -23.33, -17.78]\n",
+      "Celsius dictionary:  {'t1': -34.44, 't2': -28.89, 't3': -23.33, 't4': -17.78}\n",
+      "Celsius dictionary through Fahrenheit temperature:  {'t1': -34.444, 't2': -28.889, 't3': -23.333, 't4': -17.778}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "\n",
+    "# Initialize `fahrenheit` dictionary \n",
+    "fahrenheit = {'t1':-30, 't2':-20, 't3':-10, 't4':0}\n",
+    "\n",
+    "1 Get the corresponding `celsius` values in list\n",
+    "2 Create the `celsius` dictionary\n",
+    "3 convert a dictionary of Fahrenheit temperatures into celsius\n",
+    "\"\"\"\n",
+    "\n",
+    "fahrenheit = {'t1':-30, 't2':-20, 't3':-10, 't4':0}\n",
+    "\n",
+    "#1 Get the corresponding `celsius` values in list\n",
+    "# round to limit value upto 2 decimal places \n",
+    "celsius= list(map(lambda x: round( (5/9)*(x-32),2 ), fahrenheit.values() )) \n",
+    "print('Celsius values: ',celcius)\n",
+    "\n",
+    "#2 Create the `celsius` dictionary\n",
+    "celsius_dict= {x:val for x,val in zip(fahrenheit,celcius) }   # dictionary comprehension\n",
+    "\n",
+    "'''or'''\n",
+    "celsius_dict = dict(zip(fahrenheit.keys(), celsius))\n",
+    "print('Celsius dictionary: ',celsius_dict)\n",
+    "\n",
+    "#3 convert a dictionary of Fahrenheit temperatures into celsius\n",
+    "celsiusf = {k: round((float(5)/9)*(v-32),3) for (k,v) in fahrenheit.items()}\n",
+    "print('Celsius dictionary through Fahrenheit temperature: ',celsiusf)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
