Added a new file

--- a/12_Map_Filter_Reduce.ipynb
+++ b/12_Map_Filter_Reduce.ipynb
@@ -473,11 +473,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 12. Fahrenheit temperatures"
+   ]
   },
   {
    "cell_type": "code",
@@ -497,7 +497,6 @@
    "source": [
     "\"\"\"\n",
     "Problem Statement:\n",
-    "\n",
     "# Initialize `fahrenheit` dictionary \n",
     "fahrenheit = {'t1':-30, 't2':-20, 't3':-10, 't4':0}\n",
     "\n",
@@ -524,6 +523,77 @@
     "celsiusf = {k: round((float(5)/9)*(v-32),3) for (k,v) in fahrenheit.items()}\n",
     "print('Celsius dictionary through Fahrenheit temperature: ',celsiusf)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 13. Book_shop1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Order number and Price per items*the quantity: \n",
+      "('34587', 163.8)\n",
+      "('98762', 284.0)\n",
+      "('77226', 108.85000000000001)\n",
+      "('88112', 84.97)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "  Problem Statement:\n",
+    "   1. Imagine an accounting routine used in a book shop.\n",
+    "   2. It works on a list with sublists, which look like this:\n",
+    "(Order Number) (Book Title)  (Author) (Quantity)  (Price per Item)\n",
+    "        34587 Learning Python, Mark Lutz  4 40.95\n",
+    "        98762 Programming Python, Mark Lutz 5 56.80\n",
+    "        77226 Head First Python, Paul Barry 3 32.95\n",
+    "        88112 Einführung in Python3, Bernd Klein  3 24.99    \n",
+    "        \n",
+    "   3. Write a Python program, \n",
+    "    A) which returns Order Summary as a list with 2-tuples. \n",
+    "       Each tuple consists of the order number and the product of the price per items \n",
+    "       and the quantity. \n",
+    "       The product should be increased by 10 INR if the value of the order is smaller \n",
+    "       than 100.00 INR.\n",
+    "  Hint:\n",
+    "    Write a Python program using lambda and map.\n",
+    "# Assume the data in form of list of list\n",
+    "orders = [ [\"34587\", \"Learning Python, Mark Lutz\", 4, 40.95], \n",
+    "           [\"98762\", \"Programming Python, Mark Lutz\", 5, 56.80], \n",
+    "           [\"77226\", \"Head First Python, Paul Barry\", 3,32.95],\n",
+    "           [\"88112\", \"Einführung in Python3, Bernd Klein\",  3, 24.99]]\n",
+    "\"\"\"\n",
+    "\n",
+    "orders = [ [\"34587\", \"Learning Python, Mark Lutz\", 4, 40.95], \n",
+    "           [\"98762\", \"Programming Python, Mark Lutz\", 5, 56.80], \n",
+    "           [\"77226\", \"Head First Python, Paul Barry\", 3,32.95],\n",
+    "           [\"88112\", \"Einführung in Python3, Bernd Klein\",  3, 24.99]]\n",
+    "\n",
+    "# x[0] denote order no.,  x[-2] denote quantity,  x[-1] denote price per item\n",
+    "# calculating the values and form a tuple\n",
+    "summary= list(map(lambda x: (x[0], x[-1]*x[-2] if x[-1]*x[-2]>100 else x[-1]*x[-2] +10), orders))\n",
+    "print('Order number and Price per items*the quantity: ')\n",
+    "\n",
+    "for value in summary:\n",
+    "    print(value)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
