Added a new file

--- a/12_Map_Filter_Reduce.ipynb
+++ b/12_Map_Filter_Reduce.ipynb
@@ -589,11 +589,67 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 14. Book_shop2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Order number, Total amount of order:\n",
+      "[1, 678.3299999999999]\n",
+      "[2, 494.46000000000004]\n",
+      "[3, 364.79999999999995]\n",
+      "[4, 492.57]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "  Problem Statement:\n",
+    "    The same bookshop, but this time we work on a different list.\n",
+    "    The sublists of our lists look like this:\n",
+    "    [ordernumber, (article number, quantity, price per unit), \n",
+    "    ... (article number, quantity, price per unit) ]\n",
+    "       \n",
+    "    [ [1, (\"5464\", 4, 9.99), (\"8274\",18,12.99), (\"9744\", 9, 44.95)], \n",
+    "      [2, (\"5464\", 9, 9.99), (\"9744\", 9, 44.95)],\n",
+    "      [3, (\"5464\", 9, 9.99), (\"88112\", 11, 24.99)],\n",
+    "      [4, (\"8732\", 7, 11.99), (\"7733\",11,18.99), (\"88112\", 5, 39.95)] ]\n",
+    "    \n",
+    "   Write a program which returns a list of list with \n",
+    "    [order number, total amount of order].\n",
+    "\"\"\"\n",
+    "\n",
+    "orders= [ [1, (\"5464\", 4, 9.99), (\"8274\",18,12.99), (\"9744\", 9, 44.95)], \n",
+    "          [2, (\"5464\", 9, 9.99), (\"9744\", 9, 44.95)],\n",
+    "          [3, (\"5464\", 9, 9.99), (\"88112\", 11, 24.99)],\n",
+    "          [4, (\"8732\", 7, 11.99), (\"7733\",11,18.99), (\"88112\", 5, 39.95)] ]\n",
+    "\n",
+    "def mult(x):\n",
+    "    '''find total amount of order for particular order number'''\n",
+    "    el_sum= 0\n",
+    "    for val in x[1:]:\n",
+    "         el_sum += val[1]*val[2]\n",
+    "    return el_sum\n",
+    "         \n",
+    "lis1 = list( map(lambda x: x[0], orders ))  # list of order no.\n",
+    "lis2 = list( map(mult, orders ))   # list of total amount of order for every order no.\n",
+    "\n",
+    "output= list(map(lambda x: [x[0], x[1]], zip(lis1,lis2)  ))\n",
+    "\n",
+    "print('Order number, Total amount of order:')\n",
+    "for value in output:\n",
+    "    print(value)\n"
+   ]
   },
   {
    "cell_type": "code",
