Added a new file

--- a/12_Map_Filter_Reduce.ipynb
+++ b/12_Map_Filter_Reduce.ipynb
@@ -657,6 +657,50 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the numbers: 1 2 3 4 5 6 7 8 9\n",
+      "Product of Odd numbers: 945\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "This Python function accepts a list of numbers and computes the product of all the odd numbers:\n",
+    "def productOfOdds(list):\n",
+    "    result = 1\n",
+    "    for i in list:\n",
+    "        if i % 2 == 1:\n",
+    "            result *= i\n",
+    "    return result\n",
+    "Rewrite the Python code using map, filter, and reduce:\n",
+    "\"\"\"\n",
+    "\n",
+    "from functools import reduce\n",
+    "def productOfOdds(list2):\n",
+    "    '''Computes the product of all the odd numbers'''\n",
+    "    return reduce(lambda x,y: x*y , list(filter(lambda a: a%2==1, list2)))\n",
+    "\n",
+    "\n",
+    "lis1= map(int, input('Enter the numbers: ').split())  # taking input from user\n",
+    "print('Product of Odd numbers:',productOfOdds(lis1))  # calling the function\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
