Added a new file

--- a/12_Map_Filter_Reduce.ipynb
+++ b/12_Map_Filter_Reduce.ipynb
@@ -528,7 +528,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 13. Book_shop1"
+    "### 13. Book_Shop1"
    ]
   },
   {
@@ -592,7 +592,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 14. Book_shop2"
+    "### 14. Book_Shop2"
    ]
   },
   {
@@ -652,11 +652,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 15. Product of odd numbers"
+   ]
   },
   {
    "cell_type": "code",
@@ -691,8 +691,92 @@
     "\n",
     "\n",
     "lis1= map(int, input('Enter the numbers: ').split())  # taking input from user\n",
-    "print('Product of Odd numbers:',productOfOdds(lis1))  # calling the function\n",
-    "\n"
+    "print('Product of Odd numbers:',productOfOdds(lis1))  # calling the function\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 16. Population"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the data in this order, \"Rank, City, Population, State\": 1,Mumbai,124.42,Maharashtra\n",
+      "Enter the data in this order, \"Rank, City, Population, State\": 9,Pune,31.24,Maharashtra\n",
+      "Enter the data in this order, \"Rank, City, Population, State\": 13,Nagpur,24.05,Maharashtra\n",
+      "Enter the data in this order, \"Rank, City, Population, State\": 6,Chennai,46.46,Tamil Nadu\n",
+      "Enter the data in this order, \"Rank, City, Population, State\": 59,Salem,8.31,Tamil Nadu\n",
+      "Enter the data in this order, \"Rank, City, Population, State\": \n",
+      "\n",
+      "Data of Population: \n",
+      "['1', 'Mumbai', '124.42', 'Maharashtra']\n",
+      "['9', 'Pune', '31.24', 'Maharashtra']\n",
+      "['13', 'Nagpur', '24.05', 'Maharashtra']\n",
+      "['6', 'Chennai', '46.46', 'Tamil Nadu']\n",
+      "['59', 'Salem', '8.31', 'Tamil Nadu']\n",
+      "\n",
+      "Total Population of State:\n",
+      "{'India Maharashtra': 179.71, 'India Tamil Nadu': 54.77}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "  Problem Statement:\n",
+    "    The given input has a number of rows, each with four fields from a table, containing:\n",
+    "          Rank,City,Population,State or union territory\n",
+    "          1,Mumbai,\"124.42\",Maharashtra\n",
+    "    You are required to output:\n",
+    "        Country, State, Population of the state (obtained by summing up the population \n",
+    "        of each city in that state) \n",
+    "        \n",
+    "    Sample Input:\n",
+    "    1,Mumbai,124.42,Maharashtra\n",
+    "    9,Pune,31.24,Maharashtra\n",
+    "    13,Nagpur,24.05,Maharashtra\n",
+    "    6,Chennai,46.46,Tamil Nadu\n",
+    "    59,Salem,8.31,Tamil Nadu\n",
+    "\n",
+    "    Sample Output:\n",
+    "    {\"key\":\"India,Tamil Nadu\",\"value\":54.77}\n",
+    "    {\"key\":\"India,Maharashtra\",\"value\":179.72}\n",
+    "\n",
+    "    Explanation:\n",
+    "    The population of India,Tamil Nadu is obtained by adding the population of \n",
+    "    Chennai and Salem. This process is repeated for India,Maharashtra. \n",
+    "\"\"\"\n",
+    "\n",
+    "population= []   # empty list\n",
+    "\n",
+    "while (True):     # taking input from user\n",
+    "    info= input('Enter the data in this order, \"Rank, City, Population, State\": ')\n",
+    "    if not info:\n",
+    "        break\n",
+    "    else:\n",
+    "        population.append(info.split(','))  # adding the info in form of list\n",
+    "\n",
+    "print('\\nData of Population: ')\n",
+    "for entity in population:   # displaying the data of population\n",
+    "    print(entity)\n",
+    "    \n",
+    "dict1= {tup[-1]: 0 for tup in population}  # dictionary comprehension\n",
+    "\n",
+    "for tup in population:    # adding the total ppopulation of particular state\n",
+    "    dict1[tup[-1]]= dict1[tup[-1]] + float(tup[-2])\n",
+    "\n",
+    "dict2= {'India '+ key: dict1[key] for key in dict1 }  # changing the key of dict1 and putting the data into dict2 \n",
+    "print('\\nTotal Population of State:')\n",
+    "print(dict2)\n",
+    "del dict1   # delete dict1\n"
    ]
   },
   {
