--- a/10_Pattern_challenges/Number_patterns.ipynb
+++ b/10_Pattern_challenges/Number_patterns.ipynb
@@ -45,11 +45,38 @@
     }
    ],
    "source": [
-    "# 2.Pattern    \n",
+    "# 2.Pattern\n",
     "row= int(input('Enter the number of rows: '))\n",
     "num= '5 4 3 2 1'\n",
     "for i in range(row):\n",
     "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 5\n",
+      "1\n",
+      "12\n",
+      "123\n",
+      "1234\n",
+      "12345\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "for i in range(1,row+1):\n",
+    "    for j in range(1,i+1):\n",
+    "        print(j, end='')\n",
+    "    print() \n"
    ]
   },
   {
