--- a/10_Pattern_challenges/Number_patterns.ipynb
+++ b/10_Pattern_challenges/Number_patterns.ipynb
@@ -81,6 +81,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 5\n",
+      "11111\n",
+      "2222\n",
+      "333\n",
+      "44\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "num= 1    \n",
+    "for i in range(row,0,-1):\n",
+    "    print(str(num)*i)\n",
+    "    num+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
