--- a/10_Pattern_challenges/Number_patterns.ipynb
+++ b/10_Pattern_challenges/Number_patterns.ipynb
@@ -103,7 +103,34 @@
     "num= 1    \n",
     "for i in range(row,0,-1):\n",
     "    print(str(num)*i)\n",
-    "    num+=1"
+    "    num+=1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 5\n",
+      "55555\n",
+      "4444\n",
+      "333\n",
+      "22\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "for i in range(row,0,-1):\n",
+    "    print(str(i)*i)\n",
+    "    "
    ]
   },
   {
