Added number pattern

--- a/10_Pattern_challenges/Number_patterns.ipynb
+++ b/10_Pattern_challenges/Number_patterns.ipynb
@@ -135,6 +135,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 5\n",
+      "54321\n",
+      "5432\n",
+      "543\n",
+      "54\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "for i in range(row):\n",
+    "    for j in range(row,i,-1):\n",
+    "        print(j, end='')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
