--- a/10_Pattern_challenges/Number_patterns.ipynb
+++ b/10_Pattern_challenges/Number_patterns.ipynb
@@ -161,11 +161,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. Pattern with only one print statment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "for i in range(1,6):\n",
+    "    for j in range(1,i+1):\n",
+    "        print(i, end='' if j< i else '\\n')"
+   ]
   }
  ],
  "metadata": {
