Added character pattern

--- a/10_Pattern_challenges/Character_Patterns.ipynb
+++ b/10_Pattern_challenges/Character_Patterns.ipynb
@@ -21,9 +21,36 @@
    "source": [
     "# 1.Pattern\n",
     "row= int(input('Enter number of rows: '))\n",
-    "num= 'EDCBA'\n",
+    "str1= 'EDCBA'\n",
     "for i in range(row):\n",
-    "    print(num)"
+    "    print(str1)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number of rows: 5\n",
+      "AAAAA\n",
+      "BBBBB\n",
+      "CCCCC\n",
+      "DDDDD\n",
+      "EEEEE\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2.Pattern\n",
+    "row= int(input('Enter number of rows: '))\n",
+    "num= 65  ## ascii code of 'A'\n",
+    "for i in range(row):\n",
+    "    print(chr(num+i)*row)\n"
    ]
   },
   {
