Added character pattern

--- a/10_Pattern_challenges/Character_Patterns.ipynb
+++ b/10_Pattern_challenges/Character_Patterns.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -48,9 +48,33 @@
    "source": [
     "# 2.Pattern\n",
     "row= int(input('Enter number of rows: '))\n",
-    "num= 65  ## ascii code of 'A'\n",
-    "for i in range(row):\n",
-    "    print(chr(num+i)*row)\n"
+    "for i in range(row):       # ascii code of 'A'=65\n",
+    "    print(chr(65+i)*row)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number of rows: 5\n",
+      "EEEEE\n",
+      "DDDDD\n",
+      "CCCCC\n",
+      "BBBBB\n",
+      "AAAAA\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3.Pattern\n",
+    "row= int(input('Enter number of rows: '))\n",
+    "for i in range(row):       # ascii code of 'E'=69\n",
+    "    print(chr(69-i)*row)\n"
    ]
   },
   {
