Added character pattern

--- a/10_Pattern_challenges/Character_Patterns.ipynb
+++ b/10_Pattern_challenges/Character_Patterns.ipynb
@@ -79,6 +79,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 5\n",
+      "A\n",
+      "AB\n",
+      "ABC\n",
+      "ABCD\n",
+      "ABCDE\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "for i in range(1,row+1):\n",
+    "    for j in range(65,65+i):\n",
+    "        print(chr(j), end='')\n",
+    "    print() "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
