--- a/10_Pattern_challenges/Character_Patterns.ipynb
+++ b/10_Pattern_challenges/Character_Patterns.ipynb
@@ -106,6 +106,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 6\n",
+      "A\n",
+      "BB\n",
+      "CCC\n",
+      "DDDD\n",
+      "EEEEE\n",
+      "FFFFFF\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "for i in range(1,row+1):        ## row starts from 1 to row no.\n",
+    "    for j in range(i):          ## starts from 0 to i\n",
+    "        print(chr(64+i), end='')\n",
+    "    print() \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
