--- a/10_Pattern_challenges/Character_Patterns.ipynb
+++ b/10_Pattern_challenges/Character_Patterns.ipynb
@@ -134,6 +134,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 6\n",
+      "AAAAAA\n",
+      "BBBBB\n",
+      "CCCC\n",
+      "DDD\n",
+      "EE\n",
+      "F\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "j=0\n",
+    "for i in range(row,0,-1):\n",
+    "    print(chr(65+j)*i)\n",
+    "    j+=1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
