--- a/10_Pattern_challenges/Character_Patterns.ipynb
+++ b/10_Pattern_challenges/Character_Patterns.ipynb
@@ -152,12 +152,40 @@
     }
    ],
    "source": [
-    "# 5.Pattern\n",
+    "# 6.Pattern\n",
     "row= int(input('Enter the number of rows: '))\n",
     "j=0\n",
     "for i in range(row,0,-1):\n",
     "    print(chr(65+j)*i)\n",
     "    j+=1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 6\n",
+      "ABCDEF\n",
+      "ABCDE\n",
+      "ABCD\n",
+      "ABC\n",
+      "AB\n",
+      "A\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 7.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "for i in range(row,0,-1):\n",
+    "    for j in range(65,65+i):\n",
+    "        print(chr(j), end='')\n",
+    "    print() \n"
    ]
   },
   {
