--- a/10_Pattern_challenges/Character_Patterns.ipynb
+++ b/10_Pattern_challenges/Character_Patterns.ipynb
@@ -190,6 +190,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 5\n",
+      "EDCBA\n",
+      "EDCB\n",
+      "EDC\n",
+      "ED\n",
+      "E\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8.Pattern\n",
+    "row= int(input('Enter the number of rows: '))  \n",
+    "for i in range(row+1):              ## runs for rows less than 6\n",
+    "    for j in range(69,64+i,-1):\n",
+    "        print(chr(j), end='')\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
