--- a/10_Pattern_challenges/Character_Patterns.ipynb
+++ b/10_Pattern_challenges/Character_Patterns.ipynb
@@ -218,6 +218,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 6\n",
+      "     A\n",
+      "    AB\n",
+      "   ABC\n",
+      "  ABCD\n",
+      " ABCDE\n",
+      "ABCDEF\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 9.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "for i in range(1,row+1):       \n",
+    "    for j in range(1,row-i+1):    ## loop for space printing\n",
+    "        print(' ', end='')\n",
+    "    \n",
+    "    for k in range(65,65+i):      ## loop for character printing\n",
+    "        print(chr(k), end='')\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
