--- a/10_Pattern_challenges/Star_Patterns.ipynb
+++ b/10_Pattern_challenges/Star_Patterns.ipynb
@@ -96,7 +96,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -128,6 +130,34 @@
     "    for k in range(1,i+1):\n",
     "        print('*', end='')\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 5\n",
+      "*****\n",
+      " ****\n",
+      "  ***\n",
+      "   **\n",
+      "    *\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "for i in range(1,row+1):       \n",
+    "    for j in range(1,i):        ## loop for space printing\n",
+    "        print(' ', end='')\n",
+    "\n",
+    "    print('*'*(row-i+1))     ## loop for star printing\n"
    ]
   },
   {
