--- a/10_Pattern_challenges/Number_patterns.ipynb
+++ b/10_Pattern_challenges/Number_patterns.ipynb
@@ -49,7 +49,7 @@
     "row= int(input('Enter the number of rows: '))\n",
     "num= '5 4 3 2 1'\n",
     "for i in range(row):\n",
-    "    print(num)"
+    "    print(num)\n"
    ]
   },
   {
@@ -157,7 +157,7 @@
     "for i in range(row):\n",
     "    for j in range(row,i,-1):\n",
     "        print(j, end='')\n",
-    "    print()"
+    "    print()\n"
    ]
   },
   {
@@ -187,7 +187,38 @@
    "source": [
     "for i in range(1,6):\n",
     "    for j in range(1,i+1):\n",
-    "        print(i, end='' if j< i else '\\n')"
+    "        print(i, end='' if j< i else '\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 6\n",
+      "     1\n",
+      "    12\n",
+      "   123\n",
+      "  1234\n",
+      " 12345\n",
+      "123456\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "for i in range(1,row+1):       \n",
+    "    for j in range(1,row-i+1):    ## loop for space printing\n",
+    "        print(' ', end='')\n",
+    "    \n",
+    "    for k in range(1,i+1):        ## loop for number printing\n",
+    "        print(k, end='')\n",
+    "    print()\n"
    ]
   },
   {
