--- a/10_Pattern_challenges/Number_patterns.ipynb
+++ b/10_Pattern_challenges/Number_patterns.ipynb
@@ -223,6 +223,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 6\n",
+      "666666\n",
+      " 55555\n",
+      "  4444\n",
+      "   333\n",
+      "    22\n",
+      "     1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 9.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "num= row\n",
+    "for i in range(1,row+1):       \n",
+    "    for j in range(1,i):        ## loop for space printing\n",
+    "        print(' ', end='')\n",
+    "\n",
+    "    print(str(num)*(row-i+1))   ## loop for number printing\n",
+    "    num-=1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
