--- a/10_Pattern_challenges/Number_patterns.ipynb
+++ b/10_Pattern_challenges/Number_patterns.ipynb
@@ -254,6 +254,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 6\n",
+      "123456\n",
+      " 12345\n",
+      "  1234\n",
+      "   123\n",
+      "    12\n",
+      "     1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 10.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "for i in range(1,row+1):       \n",
+    "    for j in range(1,i):        ## loop for space printing\n",
+    "        print(' ', end='')\n",
+    "    \n",
+    "    for k in range(1,row-i+2):\n",
+    "        print(k,end='')        ## loop for number printing\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
