--- a/10_Pattern_challenges/Star_Patterns.ipynb
+++ b/10_Pattern_challenges/Star_Patterns.ipynb
@@ -162,6 +162,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number of rows: 6\n",
+      "       *\n",
+      "      ***\n",
+      "     *****\n",
+      "    *******\n",
+      "   *********\n",
+      "  ***********\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6.Pattern\n",
+    "row= int(input('Enter number of rows: '))\n",
+    "\n",
+    "#for i in range(row):\n",
+    "#    print(' '*(row-i) + '*'*(2*i+1) )\n",
+    "\n",
+    "'''Or'''\n",
+    "\n",
+    "for i in range(row):\n",
+    "    for j in range(row-i+1):\n",
+    "        print(' ', end='')\n",
+    "    \n",
+    "    for k in range(1,(2*i+2)):\n",
+    "        print('*', end='')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
