--- a/10_Pattern_challenges/Star_Patterns.ipynb
+++ b/10_Pattern_challenges/Star_Patterns.ipynb
@@ -199,6 +199,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number of rows: 6\n",
+      "***********\n",
+      " *********\n",
+      "  *******\n",
+      "   *****\n",
+      "    ***\n",
+      "     *\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 7.Pattern\n",
+    "row= int(input('Enter number of rows: '))\n",
+    "\n",
+    "#for i in range(row):\n",
+    "#    print(' '*i + '*'*((2*row-1)-2*i) )\n",
+    "'''Or'''\n",
+    "\n",
+    "for i in range(row):\n",
+    "    for j in range(i):\n",
+    "        print(' ', end='')\n",
+    " \n",
+    "    for k in range((2*row-1)-2*i ,0,-1):\n",
+    "        print('*', end='')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
