--- a/10_Pattern_challenges/Character_Patterns.ipynb
+++ b/10_Pattern_challenges/Character_Patterns.ipynb
@@ -312,6 +312,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 6\n",
+      "       A\n",
+      "      BBB\n",
+      "     CCCCC\n",
+      "    DDDDDDD\n",
+      "   EEEEEEEEE\n",
+      "  FFFFFFFFFFF\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 12.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "for i in range(row):\n",
+    "    for j in range(row-i+1):\n",
+    "        print(' ', end='')\n",
+    "    \n",
+    "    for k in range(1,(2*i+2)):\n",
+    "        print(chr(65+i), end='')\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
