--- a/10_Pattern_challenges/Number_patterns.ipynb
+++ b/10_Pattern_challenges/Number_patterns.ipynb
@@ -285,6 +285,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 6\n",
+      "       1\n",
+      "      222\n",
+      "     33333\n",
+      "    4444444\n",
+      "   555555555\n",
+      "  66666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 11.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "for i in range(row):\n",
+    "    for j in range(row-i+1):\n",
+    "        print(' ', end='')\n",
+    "    \n",
+    "    for k in range(1,(2*i+2)):\n",
+    "        print(i+1, end='')\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
