--- a/10_Pattern_challenges/Star_Patterns.ipynb
+++ b/10_Pattern_challenges/Star_Patterns.ipynb
@@ -235,6 +235,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number of rows: 8\n",
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8.Pattern\n",
+    "def upper_pattern(n):\n",
+    "    '''upper pattern logic,common for both'''\n",
+    "    for i in range(1, n+1):\n",
+    "        for j in range(1,i+1):\n",
+    "            print('*',end='')\n",
+    "        print()\n",
+    "\n",
+    "def lower_pattern(n):\n",
+    "    '''lower pattern logic'''\n",
+    "    for i in range(1,n):\n",
+    "        for j in range(n-i,0,-1):\n",
+    "            print('*', end='')\n",
+    "        print()\n",
+    "\n",
+    "        \n",
+    "row= int(input('Enter number of rows: '))\n",
+    "if row%2==0:\n",
+    "    n= (row)//2         ## for even no. of rows\n",
+    "    upper_pattern(n)\n",
+    "    lower_pattern(n+1)\n",
+    "        \n",
+    "else:\n",
+    "    n= (row)//2+1        ## for odd no. of rows\n",
+    "    upper_pattern(n)\n",
+    "    lower_pattern(n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
