--- a/10_Pattern_challenges/Star_Patterns.ipynb
+++ b/10_Pattern_challenges/Star_Patterns.ipynb
@@ -285,6 +285,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number of rows: 7\n",
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 9.Pattern \n",
+    "row= int(input('Enter number of rows: '))\n",
+    "n= (row+1)//2          # int divisible\n",
+    "for i in range(1,n+1):\n",
+    "    print('*'*i)        # same line repeating again so we have used multiplication operator(*)\n",
+    "\n",
+    "for i in range(row-n,0,-1):\n",
+    "    print('*'*i)        # same line repeating again so we have used multiplication operator(*)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
