--- a/10_Pattern_challenges/Number_patterns.ipynb
+++ b/10_Pattern_challenges/Number_patterns.ipynb
@@ -307,10 +307,40 @@
     "row= int(input('Enter the number of rows: '))\n",
     "for i in range(row):\n",
     "    for j in range(row-i+1):\n",
-    "        print(' ', end='')\n",
+    "        print(' ', end='')       ## loop for space printing\n",
     "    \n",
     "    for k in range(1,(2*i+2)):\n",
-    "        print(i+1, end='')\n",
+    "        print(i+1, end='')       ## loop for number printing\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 5\n",
+      "      1\n",
+      "     123\n",
+      "    12345\n",
+      "   1234567\n",
+      "  123456789\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 12.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "for i in range(row):\n",
+    "    for j in range(row-i+1):\n",
+    "        print(' ', end='')      ## loop for space printing\n",
+    "    \n",
+    "    for k in range(1,(2*i+2)):\n",
+    "        print(k, end='')        ## loop for number printing\n",
     "    print()\n"
    ]
   },
