--- a/10_Pattern_challenges/Number_patterns.ipynb
+++ b/10_Pattern_challenges/Number_patterns.ipynb
@@ -346,6 +346,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 5\n",
+      "      1\n",
+      "     321\n",
+      "    54321\n",
+      "   7654321\n",
+      "  987654321\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 13.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "for i in range(row):\n",
+    "    for j in range(row-i+1):\n",
+    "        print(' ', end='')     ## loop for space printing\n",
+    "    \n",
+    "    for k in range((2*i+1),0,-1):\n",
+    "        print(k, end='')       ## loop for number printing\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
