--- a/10_Pattern_challenges/Character_Patterns.ipynb
+++ b/10_Pattern_challenges/Character_Patterns.ipynb
@@ -334,10 +334,10 @@
     "row= int(input('Enter the number of rows: '))\n",
     "for i in range(row):\n",
     "    for j in range(row-i+1):\n",
-    "        print(' ', end='')\n",
+    "        print(' ', end='')       ## loop for space printing\n",
     "    \n",
     "    for k in range(1,(2*i+2)):\n",
-    "        print(chr(65+i), end='')\n",
+    "        print(chr(65+i), end='')    ## loop for character printing\n",
     "    print()\n"
    ]
   },
@@ -365,10 +365,41 @@
     "row= int(input('Enter the number of rows: '))\n",
     "for i in range(row):\n",
     "    for j in range(row-i+1):\n",
-    "        print(' ', end='')\n",
+    "        print(' ', end='')        ## loop for space printing\n",
     "    \n",
     "    for k in range(1,(2*i+2)):\n",
-    "        print(chr(64+k), end='')\n",
+    "        print(chr(64+k), end='')   ## loop for character printing\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 6\n",
+      "       A\n",
+      "      CBA\n",
+      "     EDCBA\n",
+      "    GFEDCBA\n",
+      "   IHGFEDCBA\n",
+      "  KJIHGFEDCBA\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 14.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "for i in range(row):\n",
+    "    for j in range(row-i+1):\n",
+    "        print(' ', end='')          ## loop for space printing\n",
+    "    \n",
+    "    for k in range((2*i+1),0,-1):\n",
+    "        print(chr(64+k), end='')    ## loop for character printing\n",
     "    print()\n"
    ]
   },
