--- a/10_Pattern_challenges/Number_patterns.ipynb
+++ b/10_Pattern_challenges/Number_patterns.ipynb
@@ -347,7 +347,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -371,6 +373,37 @@
     "    \n",
     "    for k in range((2*i+1),0,-1):\n",
     "        print(k, end='')       ## loop for number printing\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 6\n",
+      "66666666666\n",
+      " 555555555\n",
+      "  4444444\n",
+      "   33333\n",
+      "    222\n",
+      "     1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 14.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "for i in range(row):\n",
+    "    for j in range(i):\n",
+    "        print(' ', end='')\n",
+    " \n",
+    "    for k in range((2*row-1)-2*i ,0,-1):\n",
+    "        print(row-i, end='')\n",
     "    print()\n"
    ]
   },
