--- a/10_Pattern_challenges/Star_Patterns.ipynb
+++ b/10_Pattern_challenges/Star_Patterns.ipynb
@@ -316,6 +316,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number of rows: 6\n",
+      "  *\n",
+      " **\n",
+      "***\n",
+      "***\n",
+      " **\n",
+      "  *\n",
+      "   \n",
+      "Enter number of rows: 7\n",
+      "   *\n",
+      "  **\n",
+      " ***\n",
+      "****\n",
+      " ***\n",
+      "  **\n",
+      "   *\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "# 10.Pattern\n",
+    "def upper_pattern(n):\n",
+    "    '''upper pattern logic,common for both'''\n",
+    "    for i in range(1, n+1):\n",
+    "        for j in range(1,n-i+1):\n",
+    "            print(' ', end='')\n",
+    "    \n",
+    "        for k in range(1,i+1):\n",
+    "            print('*', end='')\n",
+    "        print()\n",
+    "\n",
+    "def lower_pattern(n,flag):\n",
+    "    '''lower pattern logic'''\n",
+    "    for i in range(1,n+1):\n",
+    "        for j in range(1, i+flag):\n",
+    "            print(' ', end='')\n",
+    "            \n",
+    "        for k in range(n-i, 0,-1):\n",
+    "            print('*', end='')\n",
+    "        print()\n",
+    "\n",
+    "for i in range(2):    \n",
+    "    row= int(input('Enter number of rows: '))\n",
+    "    if row%2==0:\n",
+    "        n= (row)//2           ## for even no. of rows\n",
+    "        upper_pattern(n)\n",
+    "        lower_pattern(n+1,0)\n",
+    "    else:\n",
+    "        n= (row)//2+1         ## for odd no. of rows\n",
+    "        upper_pattern(n)\n",
+    "        lower_pattern(n,1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
