Addded a new file

--- a/10_Pattern_challenges/Number_patterns.ipynb
+++ b/10_Pattern_challenges/Number_patterns.ipynb
@@ -400,11 +400,44 @@
     "row= int(input('Enter the number of rows: '))\n",
     "for i in range(row):\n",
     "    for j in range(i):\n",
+    "        print(' ', end='')     ## loop for space printing\n",
+    " \n",
+    "    for k in range((2*row-1)-2*i ,0,-1):\n",
+    "        print(row-i, end='')     ## loop for number printing\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 6\n",
+      "1234567891011\n",
+      " 123456789\n",
+      "  1234567\n",
+      "   12345\n",
+      "    123\n",
+      "     1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 15.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "for i in range(row):\n",
+    "    num=1\n",
+    "    for j in range(i):\n",
     "        print(' ', end='')\n",
     " \n",
     "    for k in range((2*row-1)-2*i ,0,-1):\n",
-    "        print(row-i, end='')\n",
-    "    print()\n"
+    "        print(num, end='')\n",
+    "        num+=1\n",
+    "    print()"
    ]
   },
   {
