--- a/10_Pattern_challenges/Character_Patterns.ipynb
+++ b/10_Pattern_challenges/Character_Patterns.ipynb
@@ -405,6 +405,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 6\n",
+      "FFFFFFFFFFF\n",
+      " EEEEEEEEE\n",
+      "  DDDDDDD\n",
+      "   CCCCC\n",
+      "    BBB\n",
+      "     A\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 15.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "for i in range(row):\n",
+    "    for j in range(i):\n",
+    "        print(' ', end='')        ## loop for space printing\n",
+    " \n",
+    "    for k in range((2*row-1)-2*i ,0,-1):\n",
+    "        print(chr(64+row-i), end='')     ## loop for character printing\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
