Addded a new file

--- a/10_Pattern_challenges/Number_patterns.ipynb
+++ b/10_Pattern_challenges/Number_patterns.ipynb
@@ -409,20 +409,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the number of rows: 6\n",
-      "1234567891011\n",
-      " 123456789\n",
-      "  1234567\n",
-      "   12345\n",
-      "    123\n",
-      "     1\n"
+      "Enter the number of rows: 5\n",
+      "123456789\n",
+      " 1234567\n",
+      "  12345\n",
+      "   123\n",
+      "    1\n"
      ]
     }
    ],
@@ -432,12 +431,69 @@
     "for i in range(row):\n",
     "    num=1\n",
     "    for j in range(i):\n",
-    "        print(' ', end='')\n",
+    "        print(' ', end='')    ## loop for space printing\n",
     " \n",
     "    for k in range((2*row-1)-2*i ,0,-1):\n",
     "        print(num, end='')\n",
     "        num+=1\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number of rows: 6\n",
+      "1\n",
+      "22\n",
+      "333\n",
+      "333\n",
+      "22\n",
+      "1\n",
+      "Enter number of rows: 7\n",
+      "1\n",
+      "22\n",
+      "333\n",
+      "4444\n",
+      "333\n",
+      "22\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 16.Pattern\n",
+    "def upper_pattern(n):\n",
+    "    '''upper pattern logic,common for both'''\n",
+    "    for i in range(1, n+1):\n",
+    "        for j in range(1,i+1):\n",
+    "            print(i,end='')\n",
+    "        print()\n",
+    "\n",
+    "def lower_pattern(n):\n",
+    "    '''lower pattern logic'''\n",
+    "    for i in range(1,n):\n",
+    "        for j in range(n-i,0,-1):\n",
+    "            print(n-i, end='')\n",
+    "        print()\n",
+    "\n",
+    "\n",
+    "for i in range(2):    \n",
+    "    row= int(input('Enter number of rows: '))\n",
+    "    if row%2==0:\n",
+    "        n= (row)//2         ## for even no. of rows\n",
+    "        upper_pattern(n)\n",
+    "        lower_pattern(n+1)\n",
+    "\n",
+    "    else:\n",
+    "        n= (row)//2+1        ## for odd no. of rows\n",
+    "        upper_pattern(n)\n",
+    "        lower_pattern(n)\n"
    ]
   },
   {
