--- a/10_Pattern_challenges/Character_Patterns.ipynb
+++ b/10_Pattern_challenges/Character_Patterns.ipynb
@@ -431,7 +431,40 @@
     " \n",
     "    for k in range((2*row-1)-2*i ,0,-1):\n",
     "        print(chr(64+row-i), end='')     ## loop for character printing\n",
-    "    print()"
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 6\n",
+      "ABCDEFGHIJK\n",
+      " ABCDEFGHI\n",
+      "  ABCDEFG\n",
+      "   ABCDE\n",
+      "    ABC\n",
+      "     A\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 16.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "for i in range(row):\n",
+    "    num=1\n",
+    "    for j in range(i):\n",
+    "        print(' ', end='')     ## loop for space printing\n",
+    " \n",
+    "    for k in range((2*row-1)-2*i ,0,-1):\n",
+    "        print(chr(64+num), end='')     ## loop for character printing\n",
+    "        num+=1\n",
+    "    print()\n"
    ]
   },
   {
