--- a/10_Pattern_challenges/Character_Patterns.ipynb
+++ b/10_Pattern_challenges/Character_Patterns.ipynb
@@ -469,6 +469,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number of rows: 6\n",
+      "C\n",
+      "CB\n",
+      "CBA\n",
+      "CBA\n",
+      "CB\n",
+      "C\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 17.Pattern\n",
+    "def upper_pattern(n):\n",
+    "    '''upper pattern logic,common for both'''\n",
+    "    for i in range(1,n+1):\n",
+    "        num=n\n",
+    "        for j in range(1,i+1):\n",
+    "            print(chr(64+num),end='')\n",
+    "            num-=1\n",
+    "        print()\n",
+    "\n",
+    "def lower_pattern(n,num):\n",
+    "    '''lower pattern logic'''\n",
+    "    for i in range(1,n):\n",
+    "        x= num\n",
+    "        for j in range(n-i,0,-1):\n",
+    "            print(chr(64+x), end='')\n",
+    "            x-=1\n",
+    "        print()\n",
+    "\n",
+    "        \n",
+    "row= int(input('Enter number of rows: '))\n",
+    "if row%2==0:\n",
+    "    n= (row)//2         ## for even no. of rows\n",
+    "    upper_pattern(n)\n",
+    "    lower_pattern(n+1,n)\n",
+    "        \n",
+    "else:\n",
+    "    n= (row)//2+1        ## for odd no. of rows\n",
+    "    upper_pattern(n)\n",
+    "    lower_pattern(n,n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
