--- a/10_Pattern_challenges/Number_patterns.ipynb
+++ b/10_Pattern_challenges/Number_patterns.ipynb
@@ -551,6 +551,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number of rows: 6\n",
+      "  3\n",
+      " 32\n",
+      "321\n",
+      "321\n",
+      " 32\n",
+      "  3\n",
+      "   \n"
+     ]
+    }
+   ],
+   "source": [
+    "# 18.Pattern\n",
+    "def upper_pattern(n):\n",
+    "    '''upper pattern logic,common for both'''\n",
+    "    for i in range(1, n+1):\n",
+    "        num=n\n",
+    "        for j in range(1,n-i+1):\n",
+    "            print(' ', end='')\n",
+    "    \n",
+    "        for k in range(1,i+1):\n",
+    "            print(num, end='')\n",
+    "            num-=1\n",
+    "        print()\n",
+    "\n",
+    "def lower_pattern(n,flag):\n",
+    "    '''lower pattern logic'''\n",
+    "    for i in range(1,n+1):\n",
+    "        num= n- int(not(flag))\n",
+    "        for j in range(1, i+flag):\n",
+    "            print(' ', end='')\n",
+    "            \n",
+    "        for k in range(n-i, 0,-1):\n",
+    "            print(num, end='')\n",
+    "            num-=1\n",
+    "        print()\n",
+    "\n",
+    "\n",
+    "row= int(input('Enter number of rows: '))\n",
+    "if row%2==0:\n",
+    "    n= (row)//2           ## for even no. of rows\n",
+    "    upper_pattern(n)\n",
+    "    lower_pattern(n+1,0)\n",
+    "else:\n",
+    "    n= (row)//2+1         ## for odd no. of rows\n",
+    "    upper_pattern(n)\n",
+    "    lower_pattern(n,1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
