--- a/10_Pattern_challenges/Character_Patterns.ipynb
+++ b/10_Pattern_challenges/Character_Patterns.ipynb
@@ -521,6 +521,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 6\n",
+      "      \n",
+      "     A\n",
+      "    ABA\n",
+      "   ABCBA\n",
+      "  ABCDCBA\n",
+      " ABCDEDCBA\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 18.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "for i in range(1,row+1):\n",
+    "    num=1\n",
+    "    for j in range(row-i+1):\n",
+    "        print(' ', end='')      ## loop for space printing\n",
+    "    \n",
+    "    for k in range(1,i):\n",
+    "        print(chr(64+num), end='')       ## loop to make first half tringle\n",
+    "        num+=1\n",
+    "        \n",
+    "    for k in range(1,i-1):\n",
+    "        print(chr(64+num-2), end='')     ## loop to make first half tringle\n",
+    "        num-=1\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
