--- a/10_Pattern_challenges/Number_patterns.ipynb
+++ b/10_Pattern_challenges/Number_patterns.ipynb
@@ -609,6 +609,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 6\n",
+      "      \n",
+      "     1\n",
+      "    121\n",
+      "   12321\n",
+      "  1234321\n",
+      " 123454321\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 19.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "for i in range(1,row+1):\n",
+    "    num=1\n",
+    "    for j in range(row-i+1):\n",
+    "        print(' ', end='')         ## loop for space printing\n",
+    "    \n",
+    "    for k in range(1,i):\n",
+    "        print(num, end='')          ## loop to make first half tringle\n",
+    "        num+=1\n",
+    "        \n",
+    "    for k in range(1,i-1):\n",
+    "        print(num-2, end='')        ## loop to make second half tringle\n",
+    "        num-=1\n",
+    "        \n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
