--- a/10_Pattern_challenges/Number_patterns.ipynb
+++ b/10_Pattern_challenges/Number_patterns.ipynb
@@ -647,6 +647,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 7\n",
+      "       0\n",
+      "      101\n",
+      "     21012\n",
+      "    3210123\n",
+      "   432101234\n",
+      "  54321012345\n",
+      " 6543210123456\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 20.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "for i in range(1,row+1):\n",
+    "    num=i-1\n",
+    "    for j in range(row-i+1):\n",
+    "        print(' ', end='')         ## loop for space printing\n",
+    "    \n",
+    "    for k in range(1,i+1):\n",
+    "        print(num, end='')          ## loop to make first half tringle\n",
+    "        num-=1\n",
+    "        \n",
+    "    for k in range(1,i):\n",
+    "        print(num+2, end='')        ## loop to make second half tringle\n",
+    "        num+=1\n",
+    "        \n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
