--- a/10_Pattern_challenges/Character_Patterns.ipynb
+++ b/10_Pattern_challenges/Character_Patterns.ipynb
@@ -551,8 +551,46 @@
     "        num+=1\n",
     "        \n",
     "    for k in range(1,i-1):\n",
-    "        print(chr(64+num-2), end='')     ## loop to make first half tringle\n",
+    "        print(chr(64+num-2), end='')     ## loop to make second half tringle\n",
     "        num-=1\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of rows: 7\n",
+      "       \n",
+      "      A\n",
+      "     BAB\n",
+      "    CBABC\n",
+      "   DCBABCD\n",
+      "  EDCBABCDE\n",
+      " FEDCBABCDEF\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 19.Pattern\n",
+    "row= int(input('Enter the number of rows: '))\n",
+    "for i in range(1,row+1):\n",
+    "    num= i\n",
+    "    for j in range(row-i+1):\n",
+    "        print(' ', end='')         ## loop for space printing\n",
+    "    \n",
+    "    for k in range(1,i):\n",
+    "        print(chr(63+num), end='')        ## loop to make first half tringle\n",
+    "        num-=1\n",
+    "        \n",
+    "    for k in range(1,i-1):\n",
+    "        print(chr(65+num), end='')        ## loop to make second half tringle\n",
+    "        num+=1\n",
     "    print()\n"
    ]
   },
