--- a/10_Pattern_challenges/Character_Patterns.ipynb
+++ b/10_Pattern_challenges/Character_Patterns.ipynb
@@ -596,6 +596,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number of rows: 7\n",
+      "   A\n",
+      "  BBB\n",
+      " CCCCC\n",
+      "DDDDDDD\n",
+      " CCCCC\n",
+      "  BBB\n",
+      "   A\n",
+      "Enter number of rows: 8\n",
+      "   A\n",
+      "  BBB\n",
+      " CCCCC\n",
+      "DDDDDDD\n",
+      "DDDDDDD\n",
+      " CCCCC\n",
+      "  BBB\n",
+      "   A\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 20.Pattern\n",
+    "def upper_pattern(n):\n",
+    "    '''upper pattern logic,common for both'''\n",
+    "    for i in range(n):\n",
+    "        for j in range(n-i-1):\n",
+    "            print(' ', end='')\n",
+    "\n",
+    "        for k in range(1,(2*i+2)):\n",
+    "            print(chr(64+i+1), end='')\n",
+    "        print()\n",
+    "\n",
+    "def lower_pattern(n,flag):\n",
+    "    '''lower pattern logic'''\n",
+    "    for i in range(n):\n",
+    "        for j in range(i+flag):\n",
+    "            print(' ', end='')\n",
+    "\n",
+    "        for k in range((2*n-1)-2*i ,0,-1):\n",
+    "            print(chr(64+n-i), end='')\n",
+    "        print()\n",
+    "\n",
+    "for i in range(2):    \n",
+    "    row= int(input('Enter number of rows: '))\n",
+    "    if row%2==0:\n",
+    "        n= (row)//2           ## for even no. of rows\n",
+    "        upper_pattern(n)\n",
+    "        lower_pattern(n,0)\n",
+    "    else:\n",
+    "        n= (row)//2+1         ## for odd no. of rows\n",
+    "        upper_pattern(n)\n",
+    "        lower_pattern(n-1,1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
